# fortyone-fe

./: Cargo.toml  README.md  Trunk.toml  index.html
assets/css/: main.css
public/css/: main.css
src/: main.rs  utils.rs
src/components/: current_player.rs  enemy.rs  game.rs  in_game.rs  mod.rs  player.rs  post_game.rs  pre_game.rs
src/context/: api_data.rs  game_state.rs  mod.rs  players.rs
src/errors/: game_error.rs  mod.rs
src/models/: api_data.rs  mod.rs  players.rs
src/services/: connection.rs
