[package]
name = "fortyone-fe"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = {  version = "0.3.77", features = ["HtmlFormElement", "Navigator", "Clipboard"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
gloo-net = "0.5"
